# ChangeLog for sys-libs/slang
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/slang/ChangeLog,v 1.100 2009/05/06 17:56:05 armin76 Exp $

  06 May 2009; Raúl Porcel <armin76@gentoo.org> slang-2.1.4.ebuild:
  arm/ia64/s390/sh/sparc stable wrt #267920

  03 May 2009; Tobias Klausmann <klausman@gentoo.org> slang-2.1.4.ebuild:
  Stable on alpha, bug #267920

  03 May 2009; Markus Meier <maekke@gentoo.org> slang-2.1.4.ebuild:
  amd64/x86 stable, bug #267920

  02 May 2009; Jeroen Roovers <jer@gentoo.org> slang-2.1.4.ebuild:
  Stable for HPPA (bug #267920).

  01 May 2009; Brent Baude <ranger@gentoo.org> slang-2.1.4.ebuild:
  stable ppc64, bug 267920

  30 Apr 2009; Brent Baude <ranger@gentoo.org> slang-2.1.4.ebuild:
  stable ppc, bug 267920

  30 Apr 2009; Samuli Suominen <ssuominen@gentoo.org> slang-2.1.3-r1.ebuild,
  slang-2.1.4.ebuild:
  Because ncurses5-config --terminfo returns /usr/share/terminfo we keepdir
  it wrt #245374 and drop USE -minimal depend.

*slang-2.1.4 (03 Nov 2008)

  03 Nov 2008; MATSUU Takuto <matsuu@gentoo.org> +slang-2.1.4.ebuild:
  Version bumped, bug #237144. Added EAPI=2.

  12 Jun 2008; Samuli Suominen <ssuominen@gentoo.org> slang-2.1.3-r1.ebuild:
  arm stable

  29 May 2008; Samuli Suominen <ssuominen@gentoo.org> slang-2.1.3-r1.ebuild:
  keyword ~arm

  04 Apr 2008; Samuli Suominen <ssuominen@gentoo.org> slang-2.1.3-r1.ebuild:
  Keyword ~sparc-fbsd, thanks to Uberlord for testing.

  19 Mar 2008; Samuli Suominen <ssuominen@gentoo.org>
  +files/slang-2.1.3-uclibc.patch, slang-2.1.3-r1.ebuild:
  Fix a regression from slang-1.4.9-r2, building on uclibc wrt bug 213925
  thanks to Natanael Copa.

  13 Mar 2008; Jeroen Roovers <jer@gentoo.org> slang-2.1.3-r1.ebuild:
  Stable for HPPA (bug #211986).

  11 Mar 2008; Brent Baude <ranger@gentoo.org> ChangeLog:
  stable ppc64, bug 211991

  11 Mar 2008; Brent Baude <ranger@gentoo.org> slang-2.1.3-r1.ebuild:
  stable ppc64, bug 211986
