@@ -2,9 +2,9 @@ AUX slang-1.4.9-fbsdlink.patch 932 RMD160 d23685d7011959bbee70328bc35d21e4f45727
 AUX slang-2.1.2-slsh-libs.patch 637 RMD160 0c8b60cf026ab7fc5ad079f04766b907325ed4df SHA1 fd1a58367e2d94f55154d66fedfe69fe921cb794 SHA256 fe5e969a51b6de0874c6b903dcf0ad21f6d5b27813e0e4c79a4dc929ab737ea8
 AUX slang-2.1.3-interix.patch 384 RMD160 6bb3451ba21e6f0219ff1df62490af3f7969d628 SHA1 8e9365a04f357d2e38955159990db69473eef6c4 SHA256 03f91a6896fbdc2151fb9d01d40be40cc45f56e7ea0412d7d685d989be41f59f
 AUX slang-2.1.3-uclibc.patch 494 RMD160 28ce3d06e5554697bf90f4991128820b19aba11e SHA1 a09a554c6166d81e223a77edc629a19bb8bf0b53 SHA256 7b88890ae8787617065d693f0469b2d462148964e3de9d74e28c0b202590fd69
-DIST slang-2.1.3.tar.bz2 1191425 RMD160 b59424972e52c361a15b23874d1a0539683608e5 SHA1 31fc6162684f69d9dd0377372dfdc336f0c4343a SHA256 534b80d31f582a00163c2abdcc0317585fa06918c96af65d008718f3b68fddfc
 DIST slang-2.1.4.tar.bz2 1283938 RMD160 394d6b6d4d770b6f006355772c159aa6ad5cde79 SHA1 8670420f870f3f5b92e72ec5962aefa52fd546a5 SHA256 944e7123a3889f1e972f77c7cd46e2e98f7f8d02d25c585f1276c9c9307161a6
-EBUILD slang-2.1.3-r1.ebuild 1496 RMD160 40135d4e10f48f2c9bb5390b41cdf1ecb1503e60 SHA1 a5c0aebdeb9683981ba99d90b4ae07ee2f071081 SHA256 4dfb0231fb5c2583ad9b92aa943394ba4ddb9760179ed8ac57798a0a649b22fa
+DIST slang-2.2.0.tar.bz2 1353374 RMD160 f4db281816e750255288ba9c7f2d8d1ec30120cf SHA1 9dcc1e94193435e97e779ec9dd9b06561d4b1812 SHA256 dfbb7ab43ef7d8367640553e219a28e5656a69742477337d104d9a2818382f64
 EBUILD slang-2.1.4.ebuild 1556 RMD160 961fab5faf7826a9f6487ed036af25338f8f0d27 SHA1 4ad39f7b2134d830163d62f639cc108dde2f73d9 SHA256 d56ec9832c5c5677ed0e699394ac41e2796ac6769b59ec9f824219216c45f7ce
-MISC ChangeLog 13218 RMD160 74d170513d0f0e6aa45f13322e91f06b837681b6 SHA1 b6d954cf4a563abd010931f9e3e7b515e6dbaf1b SHA256 a8cdafe4621d1e239a125acd46035dc454e8c9da338c8ecb5c39e5dc2b720b55
+EBUILD slang-2.2.0.ebuild 1608 RMD160 803582de1d61fe78104660e846baf3986bba1786 SHA1 d33ecd7baecb77ba99eac73fb537fdb550740173 SHA256 f686bcc328166c5ab1d8966c40fbd6ab991e8a8d6786992b9bc8701fdafd4ca6
+MISC ChangeLog 13355 RMD160 c841bee874fbbc68627b86a151511d39cb3af02e SHA1 e06298021034e5418ee95f65d0ea66fffa8ce883 SHA256 d85c271628213a29e0760f383498bd5b81a8a6c37aaa587c5fe918996ed04e1e
 MISC metadata.xml 157 RMD160 1305e8c09c6d49c0db2a18bb50b045460c124ebe SHA1 874689ae30dfe223d487e0e6a5e0a0dbf06a69f4 SHA256 c3c089740b31ec0f4d7fbc3bf2d6bb8460ccfd0694f01bf91b22a2e1930d6d5d
