@@ -1,6 +1,11 @@
 # ChangeLog for sys-libs/slang
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/slang/ChangeLog,v 1.100 2009/05/06 17:56:05 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/slang/ChangeLog,v 1.101 2009/08/24 23:57:00 matsuu Exp $
+
+*slang-2.2.0 (24 Aug 2009)
+
+  24 Aug 2009; MATSUU Takuto <matsuu@gentoo.org> +slang-2.2.0.ebuild:
+  Version bumped. Added zlib USE flag.
 
   06 May 2009; Raúl Porcel <armin76@gentoo.org> slang-2.1.4.ebuild:
   arm/ia64/s390/sh/sparc stable wrt #267920
